<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MASLA7Ty</string>
    <string name="title_activity_main">MASLA7Ty</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="next">TouchProcessingActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_movies">Search Movies</string>
    <string name="extra_recipe">recipe_extra</string>
    <string name="content_desc_background">Masla7ty Background Image</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="sign_up_Enterprise">Or you are Enterprise? Sign up her!</string>
    <string-array name="Sliding_Pages">
        <item>posts</item>
    </string-array>

    <string-array name="pages">
        <item>Posts</item>
        <item>Friends</item>
        <item>Events</item>

    </string-array>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and receiver address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="action_tabs_using_library">SlidingTabLayoutExample</string>
    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
    <string name="welcome_string">,, WELCOME TO</string>
    <string name="signing_string">SIGN IN\nFORM ,,</string>
    <string name="username_hint_string">Username</string>
    <string name="passowrd_hint_string">Password</string>
    <string name="signing_btn_string">  Log in  </string>
    <string name="register_btn_string">Register</string>
    <string name="desi_by_string">DESIGNED BY Hassan</string>
    <string name="error_empty_field">Cannt be empty</string>
    <string name="error_invalid_data">Username or Password is in correct</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="publish_btn_string">Publish</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_take_photo">TakePhoto</string>
    <string name="action_search">search</string>
    <string name="post_search">search on posts</string>
    <string name="title_activity_login_screen">login_screen</string>
    <string name="sign_in">Sign in</string>
    <string name="highlight_preamble">To use Masla7ty, please sign in with one of the services below:</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_service_details">ServiceDetailsActivity</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="preference_file_key">com.hassan.masla7ty.user_name</string>
    <string name="title_activity_my_friends">MyFriends</string>
    <string name="title_activity_sign_up_enterprise">SignUpEnterpriseActivity</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="title_activity_post_search">PostSearchActivity</string>
    <string name="camera_unavailable"><b>Camera could not be opened.</b>\nThis occurs when the camera is not available.</string>
    <string name="camera_access_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="camera_permission_not_available">Permission is not available. Requesting camera permission.</string>
    <string name="camera_permission_available">Camera permission is available. Starting preview.</string>
    <string name="camera_permission_granted">Camera permission was granted. Starting preview.</string>
    <string name="camera_permission_denied">Camera permission request was denied.</string>
    <string name="title_location_permission">Accept Location permission</string>
    <string name="text_location_permission">Accept Location Permission to open map</string>
    <string name="shold_accept_to_open_map">You Shold Accept To open Map</string>
    <string name="send">send</string>
    <string name="my_photo">my photo</string>
    <string name="photo_taken">photo taken</string>
    <string name="drawer_photo">drawer Photo</string>
    <string name="tab_image">tab image</string>
    <string name="post_image">post image</string>
    <string name="shadow">shadow</string>
    <string name="user_photo">user photo</string>
    <string name="searching">search</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="m">M</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="l">L</string>
    <string name="_7">7</string>
    <string name="t">T</string>
    <string name="y">y</string>
    <string name="write_post">Write Post</string>
    <string name="typing_to_search">typing to Search</string>
    <string name="search_for_post">search for post</string>
    <string name="dummy">Dummy Text</string>
    <string name="dummy2">failed to get data from the sitefailed to get data from the site failed to get data from the site failed to get data from the sitefailed to get data from the site failed to get data from the site vfailed to get data from the site</string>
    <string name="company_name">company name</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
    <string name="loc">loc</string>
    <string name="hassan_ramadan">Hassan Ramadan</string>
    <string name="my_profile">my Profile</string>
    <string name="home">Home</string>
    <string name="friend">Friend</string>
    <string name="my_friends">my friends</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log Out</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="_0">0</string>
    <string name="likes">likes</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>
    <string name="comment">comment</string>
    <string name="in_your_location">Are you want to add this location to locations where you can help others?</string>
    <string name="add_friend">add Friend</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="from">From</string>
    <string name="assiut">Assiut</string>
    <string name="number">Number</string>
    <string name="dum_num">01111928274</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wait">wait request</string>
    <string name="add_post">add post</string>
    <string name="error">Error in the connection</string>
    <string name="no_comment">No comments</string>
    <string name="email_dumb">hassan@gmail.com</string>
    <string name="name">Ahmed</string>
    <string name="last">taha</string>
    <string name="imageresource">http://masla7ty.esy.es/app/uploads/922120-06-1510382635_676632562451415_5481565986969569974_n.jpg</string>
    <string name="toassit">welcom to assiut</string>
    <string name="dumbdate">2015-02-02</string>
    <string name="dumbhours">12:13</string>
    <string name="processing">Processing...</string>
    <string name="sendsomment">send comment</string>
    <string name="failed">failed</string>
    <string name="success">success</string>
    <string name="no_success">success=0</string>
    <string name="uploading">Uploading...</string>
    <string name="waiting_image">Waiting while uploading the image</string>
    <string name="error_file_image">error to create file for image</string>
    <string name="select_image">Select Picture</string>
    <string name="all_field_requested">All fields are requires</string>
    <string name="check_user_name">Check username and password</string>
    <string name="authentiacation_failed">Authentication failed.</string>
    <string name="enable_location">Enable either GPS or any other location"
                 service to find current location.  Click OK to go to location services settings to let you do so.</string>
    <string name="cancel">Cancel</string>
    <string name="your_location_added">your location has been added successfully</string>
    <string name="your_location_not_added">error your location hasn\'t been added</string>
    <string name="current_location_saved">Current Location has been saved</string>
    <string name="no_friend">No Friends</string>
    <string name="no_details">No details</string>
    <string name="no_post">no posts</string>
    <string name="create_new_user">Creating new user</string>
    <string name="email_changed">email changed</string>
    <string name="login">LOGIN</string>
    <string name="your_setting_changed">your settings has been changed successfully</string>
    <string name="your_setting_not_changed">error your settings hasn\'t been changed</string>
    <string name="press_unlike">press unlike if you unlike</string>
    <string name="press_like">press like if you like</string>
    <string name="your_are_friend">you are already friends</string>
    <string name="message_sent">message send to be friends</string>
    <string name="no_info">No Info</string>
    <string name="empty" />
</resources>
