<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    tools:context="activities.LoginActivity" >
    >
    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:alpha=".6"

        android:contentDescription="@string/content_desc_background" />
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/AuthTitle1">
        <TextView

            style="@style/Masla7tytitle"
            android:textColor="#F7BE13"
            android:text="@string/m" />
        <TextView

            style="@style/Masla7tytitle"
            android:textColor="#C1F765"
            android:text="@string/a"
             />
        <TextView

            style="@style/Masla7tytitle"
            android:textColor="#26FCC6"
            android:text="@string/s" />
        <TextView

            style="@style/Masla7tytitle"
            android:textColor="#E699F9"
            android:text="@string/l"
            />
        <TextView

            style="@style/Masla7tytitle"
            android:textColor="#1FEE18"
            android:text="@string/_7" />
        <TextView

            style="@style/Masla7tytitle"
            android:textColor="#C4F72A"
            android:text="@string/t"
            />
        <TextView

            style="@style/Masla7tytitle"
            android:textColor="#02FE28"
            android:text="@string/y"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer" >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/usernameET"
                style="@style/AuthEditText"
                android:hint="@string/username_hint_string">
          <requestFocus />
         </EditText>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            style="@style/AuthEditText"
            android:id="@+id/passowrdET"
            android:hint="@string/passowrd_hint_string"
            android:inputType="textPassword"
            />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        style="@style/AuthButton"
        android:id="@+id/signingBtn"
        android:text="@string/signing_btn_string"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextLayout"
        android:textSize="22sp"
        />
    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signingBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textSize="18dp"
        android:textStyle="normal|bold|italic"
        android:text="@string/sign_up_text"
        android:textColor="#50c" />
    <TextView
        android:id="@+id/signUpEnterprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic"
        android:fontFamily="sans-serif-thin"
        android:text="@string/sign_up_Enterprise"
        android:textColor="#80c" />

</RelativeLayout>
