<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/my_profile"/>

        <item
            android:id="@+id/Myfriends"
            android:icon="@drawable/ic_group_work_black_24dp"
            android:title="@string/my_friends"/>

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting"/>
        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/log_out"/>

    </group>

</menu>
