<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hassan.masla7ty.activities.MainActivity"
    >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_search_main"
        android:icon="@drawable/ic_search_black_48dp"
        android:title="@string/action_search"

        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/current_loc"
        android:title="loc"
        android:icon="@drawable/ic_action_name"
        android:orderInCategory="200"
        app:showAsAction="always"/>

    <item android:id="@+id/add_place"
        android:title="add location"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="200"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/action_search_post"
        android:title="@string/post_search"
        app:showAsAction="collapseActionView" />
</menu>
