<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/feed_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:layout_marginLeft="@dimen/feed_item_margin"
        android:layout_marginRight="@dimen/feed_item_margin"
        android:layout_marginTop="@dimen/feed_item_margin"
        android:background="@drawable/bg_parent_rounded_corner"
        android:orientation="vertical"
        android:paddingBottom="@dimen/feed_item_padding_top_bottom"
        android:paddingTop="@dimen/feed_item_padding_top_bottom" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/feed_item_padding_left_right"
            android:paddingRight="@dimen/feed_item_padding_left_right" >

        <com.pkmmte.view.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/list_ic"
            android:id="@+id/userImage"
            app:border="true"

            app:border_width="0dp"
            app:shadow="true"  />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/feed_item_profile_info_padd"
                android:paddingEnd="@dimen/feed_item_profile_info_padd">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/news_title_tv"
            android:text="@string/title"

            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/userImage"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/news_date_tv"
            android:text="@string/date"
            android:layout_below="@id/news_title_tv"
            android:layout_toEndOf="@+id/userImage"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:textColor="#173966"
            android:textSize="10sp"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userImage"
            android:text="@string/dummy"
            android:layout_toEndOf="@id/userImage"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:padding="3dp"
            android:textColor="@android:color/black"
            android:id="@+id/news_body"/>


        <ImageView
            android:id="@+id/postImage"
            android:contentDescription="@string/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numOfLikes"
        android:text="@string/_0"


        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#00ccff"
        android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/likes"
            android:layout_below="@id/postImage"

            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="#00ccff"
            android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:padding="1dp">
            <Button
                android:id="@+id/like"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="#fffff0"
                android:drawableStart="@drawable/ic_thumb_up_black_24dp"
                android:text="@string/like"
                android:textColor="@color/accent_material_light"/>
            <Button
                android:id="@+id/unlike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="#fffff0"
                android:drawableStart="@drawable/ic_thumb_down_black_24dp"
                android:text="@string/dislike"
                android:textColor="@color/accent_material_light"/>
            <Button
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="#fffff0"
                android:drawableStart="@drawable/ic_comment_black_24dp"
                android:text="@string/comment"
                android:textColor="@color/accent_material_light"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>